--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^9.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "mongoose": "^8.16.5",
     "nodemon": "^3.1.10"
   }
 }
