--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "concurrently": "^9.2.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
     "nodemon": "^3.1.10"
   }
