added user and authMiddleware

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 NODE_ENV=development
 PORT=5000
 MONGO_URI=mongodb+srv://satyam073000:csfU94Lz4auNjzIt@elite-mart-shop.1oymhy7.mongodb.net/elitemart?retryWrites=true&w=majority&appName=elite-mart-shop
+JWT_SECRET=ertygjhgbfddssadfghgfdsdefrttyghxgbfvd
+JWT_EXPIRES="30d"
 
 ;csfU94Lz4auNjzIt - satyam073000
