--- a/.env
+++ b/.env
@@ -2,6 +2,5 @@ NODE_ENV=development
 PORT=5000
 MONGO_URI=mongodb+srv://satyam073000:csfU94Lz4auNjzIt@elite-mart-shop.1oymhy7.mongodb.net/elitemart?retryWrites=true&w=majority&appName=elite-mart-shop
 JWT_SECRET=ertygjhgbfddssadfghgfdsdefrttyghxgbfvd
-JWT_EXPIRES="30d"
-
+REFRESH_SCRET=dfdghfddfgthyuuygrfdssdfgrh
 ;csfU94Lz4auNjzIt - satyam073000
