images uploading and fetching URL from the cloudinary

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ MONGO_URI=mongodb+srv://satyam073000:csfU94Lz4auNjzIt@elite-mart-shop.1oymhy7.mo
 JWT_SECRET=ertygjhgbfddssadfghgfdsdefrttyghxgbfvd
 REFRESH_SCRET=dfdghfddfgthyuuygrfdssdfgrh
 ;csfU94Lz4auNjzIt - satyam073000
+CLOUDINARY_CLOUD_NAME=dkft9ech0
+CLOUDINARY_API_KEY=871483315254192
+CLOUDINARY_API_SECRET=9pbTWQqENIi14N3TvMI9FEMd4FU
